kubernetes/apps/external/skkweb/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skkweb
  namespace: external
  annotations:
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Authorization $http_authorization;
      proxy_pass_header Authorization;
spec:
  ingressClassName: nginx
  rules:
    - host: &host "skkweb.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: skkweb
                port:
                  number: 80
  tls:
    - hosts:
        - *host

---
apiVersion: v1
kind: Endpoints
metadata:
  name: skkweb
  namespace: external
subsets:
  - addresses:
      - ip: 192.168.1.73
    ports:
      - name: http
        port: 80
        protocol: TCP
